--- a/static/style.css
+++ b/static/style.css
@@ -1891,6 +1891,7 @@ canvas{
     display: -webkit-box;
     overflow:hidden;
     text-overflow: ellipsis;
+    margin: 0;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
 }
@@ -1899,4 +1900,217 @@ canvas{
     width: 60%;
     display: inline-block;
     vertical-align: middle;
+}
+
+.blog-home-smallblog-thumb{
+    display: inline-block;
+    vertical-align: middle;
+    width: 10em;
+    height: 6em;
+    margin-top: 1em;
+    border-radius: .7em;
+}
+
+.blogs-createnew-title{
+    font-family: 'avenir-600';
+    text-align: left;
+    margin-top: 1em;
+    margin-left: 7em;
+}
+
+.blogs-createnew-input{
+    width: 22em;
+    margin-bottom: 1em;
+    height: 2em;
+    border-radius: 10px;
+    border: none;
+    padding: 1em 1.25em 1em 1.25em;
+    color: white;
+    font-size: 1.2em;
+    font-family: 'gilroy-600';
+    outline: none;
+    background-color: #49394280;
+}
+
+.bcn-1{
+    margin-right:1.5em;
+    display: inline-block;
+    vertical-align: top;
+    width: 30em;
+}
+
+.bcn-2{
+    display: inline-block;
+    vertical-align: top;
+    width: 30em;
+}
+
+.bci-2{
+    height: 22em;
+    resize: none;
+}
+
+.bcn-3{
+    height: 14em;
+    position: relative;
+}
+
+.bci-img{
+    width: 2em;
+    height: 2em;
+    display: inline-block;
+    vertical-align: top;
+    border-radius: 50%;
+}
+
+.blogs-createnew-thot{
+    resize: none;
+    width: 80%;
+    background: none;
+    margin-left: 1em;
+    vertical-align: bottom;
+    outline: none;
+    font-family: 'gilroy-600';
+    font-size: 1em;
+    border: none;
+    color: white;
+    display: inline-block;
+    height: 100%;
+}
+
+.blogs-createnew-thumb{
+    width: 100%;
+    overflow: hidden;
+    height: 10em;
+    border-radius: .4em;
+    background-color: #1a1a1a;
+}
+
+.blogs-createnew-thumb-overlay{
+    position: absolute;
+    left: 1.25em;
+    right: 1.25em;
+    height: 10em;
+    border-radius: .4em;
+    display: none;
+    background-color: #000000be;
+}
+
+::selection{
+    background-color: white;
+    color: black;
+}
+
+.createnew-upload{
+    width: 100%;
+}
+
+.createnew-thumb-overlay-main{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.createnew-thumb-overlay-vector{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.createnew-thumb-overlay-txt{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.orr{
+    font-family: 'gilroy-700';
+    letter-spacing: 0.1em;
+    font-size: .8em;
+    text-align: left;
+}
+
+.bcn-imgurl{
+    width: 65%;
+    height: 3.5em;
+    float: left;
+    outline: none;
+    margin-top: -.75em;
+    color: white;
+    border: none;
+    background-color: #161616;
+    border-radius: .5em;
+    font-family: 'gilroy-600';
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.createnew-tags-head{
+    text-align: left;
+    font-family: 'gilroy-700';
+    font-weight: 700;
+    margin-left: .5em;
+    margin-top: 1.5em;
+}
+
+.tags-value{
+    width: 8em;
+    border: 2px solid white;
+    border-radius: 2em;
+    margin-right: .75em;
+    margin-left: .75em;
+    float: left;
+    margin-bottom: 1em;
+}
+
+.tags-value-txt{
+    margin-block-start: 0.6em;
+    text-align: left;
+    font-family: 'gilroy-700';
+    margin-left: 1em;
+    margin-block-end: 0.6em;
+}
+
+.tags-value-bool{
+    max-width: 1em;
+    margin-top: -1.65em;
+    margin-right: 1em;
+    float: right;
+}
+
+.createnew-postform{
+    width: 64%;
+    height: 2.5em;
+    border-radius: 10px;
+    font-size: 1.3em;
+    margin-left: 2em;
+    color: white;
+    font-family: 'gilroy-700';
+    background: #49394280;
+    margin-right: 2em;
+}
+
+.login-btn{
+    display: inline;
+    vertical-align: middle;
+    margin-left: 3em;
+    width: 12em;
+    font-family: 'gilroy-700';
+    color: white;
+    border: none;
+    outline: none;
+    filter: drop-shadow(0 3px 0.3rem #ffffff4f);
+    font-size: 1em;
+    border-radius: .6em;
+    height: 3em;
+    background-color: #49394280;
+}
+
+.login-btn:hover{
+    animation: wo 1s 1 forwards;
+}
+
+@keyframes wo {
+    100%{
+        filter: drop-shadow(0 0 0.0rem black);
+    }
 }
